--- a/src/main/kotlin/com/github/shingyx/youtubedlgui/Main.fxml
+++ b/src/main/kotlin/com/github/shingyx/youtubedlgui/Main.fxml
@@ -8,20 +8,22 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.shingyx.youtubedlgui.MainController">
+<VBox fx:id="container" alignment="CENTER" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.121"
+      xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.github.shingyx.youtubedlgui.MainController">
     <padding>
-        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
     </padding>
     <HBox alignment="CENTER_RIGHT">
         <Button mnemonicParsing="false" onAction="#openConfiguration" text="Configure">
-           <font>
-               <Font size="10.0"/>
-           </font>
+            <font>
+                <Font size="10.0"/>
+            </font>
         </Button>
     </HBox>
     <HBox alignment="CENTER" spacing="10.0">
-        <Label text="Video URL:" />
-        <TextField fx:id="urlField" prefWidth="250.0" HBox.hgrow="ALWAYS" />
+        <Label text="Video URL:"/>
+        <TextField fx:id="urlField" prefWidth="500.0" HBox.hgrow="ALWAYS"/>
     </HBox>
-    <Button fx:id="startDownloadButton" defaultButton="true" mnemonicParsing="false" onAction="#startDownload" text="Start" />
+    <Button defaultButton="true" mnemonicParsing="false" onAction="#startDownload" text="Start"/>
 </VBox>
