--- a/src/main/resources/Main.fxml
+++ b/src/main/resources/Main.fxml
@@ -9,8 +9,7 @@
 <?import javafx.scene.text.Font?>
 
 <VBox fx:id="container" alignment="CENTER" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.121"
-      xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.github.shingyx.youtubedlgui.MainController">
+      xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.shingyx.youtubedlgui.MainController">
     <padding>
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
     </padding>
