--- a/src/main/resources/Main.fxml
+++ b/src/main/resources/Main.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" spacing="10.0" xmlns:fx="http://javafx.com/fxml" fx:controller="com.github.shingyx.youtubedlgui.MainController">
+<VBox alignment="CENTER" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.shingyx.youtubedlgui.MainController">
     <padding>
         <Insets topRightBottomLeft="10.0"/>
     </padding>
@@ -20,8 +20,11 @@
         </Button>
     </HBox>
     <HBox alignment="CENTER" spacing="10.0">
-        <Label text="Video URL:"/>
-        <TextField fx:id="urlField" prefWidth="600.0" HBox.hgrow="ALWAYS"/>
+        <padding>
+            <Insets left="25.0" right="25.0"/>
+        </padding>
+        <Label text="Video URL"/>
+        <TextField fx:id="urlField" prefWidth="550.0" HBox.hgrow="ALWAYS"/>
         <Button mnemonicParsing="false" onAction="#pasteUrl" text="Paste URL"/>
     </HBox>
     <Button defaultButton="true" mnemonicParsing="false" onAction="#startDownload" text="Start"/>
@@ -30,12 +33,12 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
         </columnResizePolicy>
         <columns>
-            <TableColumn text="Video">
+            <TableColumn minWidth="200.0" text="Video">
                 <cellValueFactory>
                     <PropertyValueFactory property="title"/>
                 </cellValueFactory>
             </TableColumn>
-            <TableColumn text="Progress">
+            <TableColumn minWidth="100.0" text="Progress">
                 <cellValueFactory>
                     <PropertyValueFactory property="progress"/>
                 </cellValueFactory>
@@ -43,12 +46,12 @@
                     <ProgressBarTableCellFactory/>
                 </cellFactory>
             </TableColumn>
-            <TableColumn text="Status">
+            <TableColumn minWidth="100.0" text="Status">
                 <cellValueFactory>
                     <PropertyValueFactory property="message"/>
                 </cellValueFactory>
             </TableColumn>
-            <TableColumn text="Speed">
+            <TableColumn maxWidth="100.0" minWidth="100.0" resizable="false" text="Speed">
                 <cellValueFactory>
                     <PropertyValueFactory property="speed"/>
                 </cellValueFactory>
@@ -56,7 +59,7 @@
                     <RightAlignTableCellFactory/>
                 </cellFactory>
             </TableColumn>
-            <TableColumn text="ETA">
+            <TableColumn maxWidth="60.0" minWidth="60.0" resizable="false" text="ETA">
                 <cellValueFactory>
                     <PropertyValueFactory property="eta"/>
                 </cellValueFactory>
